--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.17.4",
     "html-to-react": "^1.7.0",
     "i18next": "^23.11.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
